# rr1_description

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: arduinobot_controller.yaml  controller.yaml  rr1_controller.yaml
mesh/collision/: 01_RR1_base.stl  01_RR1_extended_base.stl  02_RR1_shoulder.stl  04_RR1_elbow.stl  07_RR1_hand_no_grip.stl  08_RR1_grip.stl  08_RR1_grip_opposite.stl
mesh/collision_origin/: 02_RR1_shoulder.stl  03_RR1_upper_arm.stl  04_RR1_elbow.stl  06_RR1_wrist.stl  07_RR1_hand.stl
mesh/visual/: 01_RR1_base.dae  01_RR1_extended_base.dae  08_RR1_grip.dae  08_RR1_grip_opposite.dae
meshes/collision/: 03_RR1_upper_arm.stl  05_RR1_forearm.stl  06_RR1_wrist.stl  07_RR1_hand.stl
meshes/collision (world origin)/: 01_RR1_base.stl  05_RR1_forearm.stl
meshes/visual (world origin)/: 01_RR1_base.dae
urdf/: arduinobot.urdf.xacro  dummy_arm.urdf  rr1.urdf  rr1.urdf.xacro  rr1_grip.urdf.xacro
urdf/includes/: constants.xacro  custom_macros.xacro  inertial_macros.xacro  materials.xacro  ros2_control.xacro
