<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>rr1_description</name>
  <version>0.0.0</version>
  <description>ROS2 package for desktop robotic arm RR1 containing the robot description.</description>
  <maintainer email="chudyja1@fit.cvut.cz">root</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>